JKS - Dodanie łączenia się z bazą online postawioną na mLab.

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -24,8 +24,9 @@ spring:
         serialization.indent_output: true
     data:
         mongodb:
-            uri: mongodb://localhost:27017
-            database: Kundel
+            #uri: mongodb://localhost:27017
+            uri: mongodb://ai:ai@ds153677.mlab.com:53677/kundel
+            database: kundel
     mail:
         host: localhost
         port: 25
